NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_Amount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Amount__c</fullName>
    <description>Dollar amount of the shipment item passed by JDE</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>