NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_DateShipped__c.field-meta.xml
<CustomField>
    <fullName>NATT_DateShipped__c</fullName>
    <description>Date the order item was shipped</description>
    <label>Date Shipped</label>
    <type>Date</type>
</CustomField>