NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_DeliverySequence__c.field-meta.xml
<CustomField>
    <fullName>NATT_DeliverySequence__c</fullName>
    <label>Delivery Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>