NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_InvoiceNumber__c</fullName>
    <description>Number of the invoice on which this shipment item appears</description>
    <label>Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>