NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product line (i.e. Order Line) on the original order</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>