NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Name__c</fullName>
    <formula>NATT_OrderProduct__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>