NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/NATT_ShipmentItemKeyId__c.field-meta.xml
<CustomField>
    <fullName>NATT_ShipmentItemKeyId__c</fullName>
    <externalId>true</externalId>
    <label>Shipment Item Key ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>