NATTQA-ENV/force-app/main/default/objects/ShipmentItem/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <label>Order Line</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>